--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     </div>
     <div class="bio">
 	    {{ site.description }}
-	    <p> email: jn.sec16@gmail.com </p>
+	    <p> email: cold21.sec@gmail.com </p>
     </div>
     <h3>Blog</h3>
     <div class="blog">
